--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -10,12 +10,15 @@
   <script type="module" src="https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js"></script>
 </head>
 <body>
+  <button class="menu-toggle" id="menuToggle">☰ Menu</button>
+
   <div class="dashboard-container">
     <aside class="sidebar">
       <h2>Dashboard</h2>
       <ul>
         <li><a href="../main.html">Home</a></li>
-        <li><a href="specialist/specialist.html">Find Specialist</a></li>
+        <li><a href="reports/report.html">View Report 📝</a></li>
+        <li><a href="health/health.html">Track Health 🩺</a></li>
       </ul>
     </aside>
 
@@ -81,5 +84,5 @@
   </div>
 
   <script type="module" src="dashboard.js"></script>
-</body>
+
 </html>
